add_executable(chat_client client.cc)
target_link_libraries(chat_client raner)

add_executable(chat_loadtest loadtest.cc)
target_link_libraries(chat_loadtest raner)

add_executable(chat_server server.cc)
target_link_libraries(chat_server raner)

add_executable(chat_server_threaded server_threaded.cc)
target_link_libraries(chat_server_threaded raner)

add_executable(chat_server_threaded_efficient server_threaded_efficient.cc)
target_link_libraries(chat_server_threaded_efficient raner)

add_executable(chat_server_threaded_highperformance server_threaded_highperformance.cc)
target_link_libraries(chat_server_threaded_highperformance raner)
